force-app/main/default/objects/GroundTravelEmssnFctr.object
<CustomObject>
    <fields>
        <fullName>EmissionsFactorUpdateYear__c</fullName>
        <description>Emissions Factor Update Year</description>
        <label>Emissions Factor Update Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MasterEmissionsSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Emissions Set</label>
        <referenceTo>GroundTravelEmssnFctr</referenceTo>
        <relationshipLabel>Ground Travel Emissions Factors</relationshipLabel>
        <relationshipName>GroundTravelEmssnFctrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Emissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Emissions</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>